add parameters check in doCheck and doTest methods

--- a/src/main/resources/io/jenkins/plugins/sqs/SqsTrigger/help-sqsDisableConcurrentBuilds.html
+++ b/src/main/resources/io/jenkins/plugins/sqs/SqsTrigger/help-sqsDisableConcurrentBuilds.html
@@ -1,6 +1,6 @@
 <div>
-    If checked, and there's build running, skip build(s) when message received.
+    If checked, and there's build running, skip build(s) when message received. <br>
     If checked, and there's no running job but multiple messages are received in one SQS call,
-    only the (random) first message is selected to trigger the build and others are ignored.
-    If un-checked, each message triggers one build.
+    only the (random) first message is selected to trigger the build and others are ignored. <br>
+    If un-checked, each message triggers one build. <br>
 </div>
